# stonks-bot

./: .gitignore  env.example  main.py  pyproject.toml
